--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "async": "^0.9.0",
     "express": "~4.9.x",
     "request": "^2.55.0"
   },
