--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "express": "~4.9.x",
+    "lodash": "^3.6.0",
+    "moment": "^2.10.0",
     "request": "^2.55.0"
   },
   "engines": {
